--- a/inventory/main.html
+++ b/inventory/main.html
@@ -33,7 +33,7 @@
         document.body.appendChild(popup_serch_div.div);
 
         popup_input_div.Set_Visible(false);
-        popup_serch_div.Set_Visible(true);
+        popup_serch_div.Set_Visible(false);
 
       </script>
    
