--- a/frontpage/frontpage.html
+++ b/frontpage/frontpage.html
@@ -34,9 +34,11 @@
      const main_div = get_main();
      document.body.appendChild(main_div);
 
+     const userinfo_div = get_userinfo();
      const pharmacy_div = get_pharmacy();
      const warehouse_div = get_warehouse();
      const ward_div = get_ward();
+     main_div.appendChild(userinfo_div);
      main_div.appendChild(pharmacy_div);
      main_div.appendChild(warehouse_div);
      main_div.appendChild(ward_div);
