Co-authored-by: ChrisMDFK <ChrisMDFK@users.noreply.github.com>

--- a/frontpage.html
+++ b/frontpage.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智慧庫儲操作頁</title>
     <link rel="stylesheet" href="frontpage.css">
+    <script src="../../Function/WebApiFunc.js"></script>
+
     <script src="ApiURL.js"></script>
-    <script src="WebApiFunc.js"></script>
     <script src="frontpage.js"></script>
-    <!-- <script src="session_check.js"></script> -->
+    <script src="session.js"></script>
+    <script src="session_check.js"></script>
 </head>
 <body>
   <h1>智慧庫儲盤點系統</h1>
