--- a/frontpage/frontpage.html
+++ b/frontpage/frontpage.html
@@ -36,11 +36,13 @@
 
      const userinfo_div = get_userinfo();
      const pharmacy_div = get_pharmacy();
-     const warehouse_div = get_warehouse();
+     const storehouse_div = get_storehouse();
      const ward_div = get_ward();
+     const lock_div = get_Lock();
+    //  main_div.appendChild(lock_div);
      main_div.appendChild(userinfo_div);
      main_div.appendChild(pharmacy_div);
-     main_div.appendChild(warehouse_div);
+     main_div.appendChild(storehouse_div);
      main_div.appendChild(ward_div);
 
     //  get_popup_serch();
