--- a/inventory/main.html
+++ b/inventory/main.html
@@ -13,12 +13,15 @@
   <script src="../../popup/map.js"></script>
   <script src="../../dist/JsBarcode.all.js"></script>
   <script src="../../UI/map.js"></script>
+  <script src="../../session_check.js"></script>
+  <script src="../../session.js"></script>
+
   <script src="main.js"></script>
   <script src="main_loadingdata.js"></script>
   <script src="main_popup_input.js"></script>
   <script src="main_popup_serch.js"></script>
   <script src="jsonFunc.js"></script>
-  <!-- <script src="../session_check.js"></script> -->
+  
 </head>
 <body>
       <script>
