--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -13,13 +13,14 @@
     <script src="../../popup/map.js"></script>
     <script src="../../dist/JsBarcode.all.js"></script>
     <script src="../../UI/map.js"></script>
+    <script src="../../session_check.js"></script>
+    <script src="../../session.js"></script>
 
     <script src="jsonFunc.js"></script>
     <script src="frontpage.js"></script>
     <script src="frontpage_loadingdata.js"></script>
     <script src="forntpage_popup_serch.js"></script>
     <script src="frontpage_popup_add.js"></script>
- 
     
     <!-- <script src="../session_check.js"></script> -->
     
