--- a/storehouse/main.html
+++ b/storehouse/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智慧管理</title>
-    <link rel="stylesheet" href="frontpage.css">
+    <link rel="stylesheet" href="main.css">
     <script src="../../ApiURL.js"></script>
     <script src="../../ChatHub.js"></script>
     <script src="../../Function/WebApiFunc.js"></script>
@@ -14,7 +14,7 @@
     <script src="../../dist/JsBarcode.all.js"></script>
     <script src="../../UI/map.js"></script>
 
-    <script src="frontpage.js"></script>
+    <script src="main.js"></script>
 
 
 </head>
