--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
     <title>智慧庫儲登入頁</title>
-    <script src="../../Function/WebApiFunc.js"></script>
+    <script src="../../Function/Basic.js"></script>
 
     <script src="ApiURL.js"></script>
     <script src="login.js"></script>
