--- a/pharmacy/main.html
+++ b/pharmacy/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智慧藥局系統</title>
-    <link rel="stylesheet" href="frontpage.css">
+    <link rel="stylesheet" href="main.css">
     <script src="../../ApiURL.js"></script>
     <script src="../../ChatHub.js"></script>
     <script src="../../Function/WebApiFunc.js"></script>
@@ -14,7 +14,7 @@
     <script src="../../dist/JsBarcode.all.js"></script>
     <script src="../../UI/map.js"></script>
 
-    <script src="frontpage.js"></script>
+    <script src="main.js"></script>
 
 
 </head>
@@ -24,7 +24,7 @@
      
      document.body.style.position = 'absolute';
      document.body.style.width = "100%";  
-     document.body.style.backgroundImage = "url('frontpage.png')";
+     document.body.style.backgroundImage = "url('main.png')";
      document.body.style.backgroundSize= "auto";
      document.body.style.backgroundPosition= "right top";
      
@@ -34,14 +34,28 @@
      const main_div = get_main();
      document.body.appendChild(main_div);
 
+      const row1_div = document.createElement("div");
+      My_Div.Init(row1_div, 'row1_div','row1_div', '260px', '120px', '');
+      My_Div.Set_Block(row1_div, DisplayEnum.FLEX, FlexDirectionEnum.ROW, JustifyContentEnum.CENTER);
+      row1_div.style.marginTop = "10px";
+
+      const row2_div = document.createElement("div");
+      My_Div.Init(row2_div, 'row2_div','row2_div', '260px', '120px', '');
+      My_Div.Set_Block(row2_div, DisplayEnum.FLEX, FlexDirectionEnum.ROW, JustifyContentEnum.CENTER);
+      row2_div.style.marginTop = "10px";
+
      const userinfo_div = get_userinfo();
-     const pharmacy_div = get_pharmacy();
-     const storehouse_div = get_storehouse();
-     const ward_div = get_ward();
+     const drugsreport_div = get_drugsreport();
+     const inventory_div = get_inventory();
+     const inventoryreport_div = get_inventoryreport();
+     const appropriation_div = get_appropriation();
      main_div.appendChild(userinfo_div);
-     main_div.appendChild(pharmacy_div);
-     main_div.appendChild(storehouse_div);
-     main_div.appendChild(ward_div);
+     main_div.appendChild(row1_div);
+     main_div.appendChild(row2_div);
+     row1_div.appendChild(drugsreport_div);
+     row1_div.appendChild(inventory_div);
+     row2_div.appendChild(inventoryreport_div);
+     row2_div.appendChild(appropriation_div);
 
 
     //  get_popup_serch();
