--- a/storehouse/main.html
+++ b/storehouse/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>智慧管理</title>
+    <title>智慧藥庫系統</title>
     <link rel="stylesheet" href="main.css">
     <script src="../../ApiURL.js"></script>
     <script src="../../ChatHub.js"></script>
@@ -24,7 +24,7 @@
      
      document.body.style.position = 'absolute';
      document.body.style.width = "100%";  
-     document.body.style.backgroundImage = "url('frontpage.png')";
+     document.body.style.backgroundImage = "url('main.png')";
      document.body.style.backgroundSize= "auto";
      document.body.style.backgroundPosition= "right top";
      
@@ -34,14 +34,28 @@
      const main_div = get_main();
      document.body.appendChild(main_div);
 
+      const row1_div = document.createElement("div");
+      My_Div.Init(row1_div, 'row1_div','row1_div', '260px', '120px', '');
+      My_Div.Set_Block(row1_div, DisplayEnum.FLEX, FlexDirectionEnum.ROW, JustifyContentEnum.CENTER);
+      row1_div.style.marginTop = "10px";
+
+      const row2_div = document.createElement("div");
+      My_Div.Init(row2_div, 'row2_div','row2_div', '260px', '120px', '');
+      My_Div.Set_Block(row2_div, DisplayEnum.FLEX, FlexDirectionEnum.ROW, JustifyContentEnum.CENTER);
+      row2_div.style.marginTop = "10px";
+
      const userinfo_div = get_userinfo();
-     const pharmacy_div = get_pharmacy();
-     const storehouse_div = get_storehouse();
-     const ward_div = get_ward();
+     const inspection_div = get_inspection();
+     const inventory_div = get_inventory();
+     const orderpicking_div = get_orderpicking();
+     const settingbarcode_div = get_settingbarcode();
      main_div.appendChild(userinfo_div);
-     main_div.appendChild(pharmacy_div);
-     main_div.appendChild(storehouse_div);
-     main_div.appendChild(ward_div);
+     main_div.appendChild(row1_div);
+     main_div.appendChild(row2_div);
+     row1_div.appendChild(inspection_div);
+     row1_div.appendChild(inventory_div);
+     row2_div.appendChild(orderpicking_div);
+     row2_div.appendChild(settingbarcode_div);
 
 
     //  get_popup_serch();
