--- a/frontpage.html
+++ b/frontpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>智慧庫儲操作頁</title>
     <link rel="stylesheet" href="frontpage.css">
-    <script src="../../Function/WebApiFunc.js"></script>
+    <script src="../../Function/Basic.js"></script>
 
     <script src="ApiURL.js"></script>
     <script src="frontpage.js"></script>
