--- a/frontpage/main.html
+++ b/frontpage/main.html
@@ -30,18 +30,10 @@
      
      const header_div = get_header();
      document.body.appendChild(header_div);
-
+     document.body.appendChild(get_choose_text_div());
+     document.body.appendChild(get_userinfo());
      const main_div = get_main();
      document.body.appendChild(main_div);
-
-     const userinfo_div = get_userinfo();
-     const pharmacy_div = get_pharmacy();
-     const storehouse_div = get_storehouse();
-     const ward_div = get_ward();
-     main_div.appendChild(userinfo_div);
-     main_div.appendChild(storehouse_div);
-     main_div.appendChild(pharmacy_div);
-     main_div.appendChild(ward_div);
 
     </script>  
 <div class="under-line">
