--- a/pharmacy/main.html
+++ b/pharmacy/main.html
@@ -9,10 +9,11 @@
     <script src="../../ChatHub.js"></script>
     <script src="../../Function/Basic.js"></script>
     <script src="../../svg/mySVG.js"></script>
-    <script src="../../Function/Basic.js"></script>
     <script src="../../popup/map.js"></script>
     <script src="../../dist/JsBarcode.all.js"></script>
     <script src="../../UI/map.js"></script>
+    <script src="../../session_check.js"></script>
+    <script src="../../session.js"></script>
 
     <script src="main.js"></script>
 
@@ -30,40 +31,10 @@
      
      const header_div = get_header();
      document.body.appendChild(header_div);
-
+     document.body.appendChild(get_choose_text_div());
+     document.body.appendChild(get_userinfo());
      const main_div = get_main();
      document.body.appendChild(main_div);
-
-      const row1_div = document.createElement("div");
-      My_Div.Init(row1_div, 'row1_div','row1_div', '100%', '120px', '');
-      My_Div.Set_Block(row1_div, DisplayEnum.FLEX, FlexDirectionEnum.ROW, JustifyContentEnum.CENTER);
-      row1_div.style.marginTop = "10px";
-
-      const row2_div = document.createElement("div");
-      My_Div.Init(row2_div, 'row2_div','row2_div', '100%', '120px', '');
-      My_Div.Set_Block(row2_div, DisplayEnum.FLEX, FlexDirectionEnum.ROW, JustifyContentEnum.CENTER);
-      row2_div.style.marginTop = "10px";
-
-     const userinfo_div = get_userinfo();
-     const drugsreport_div = get_drugsreport();
-     const inventory_div = get_inventory();
-     const inventoryreport_div = get_inventoryreport();
-     const appropriation_div = get_appropriation();
-     main_div.appendChild(userinfo_div);
-     main_div.appendChild(row1_div);
-     main_div.appendChild(row2_div);
-     row1_div.appendChild(drugsreport_div);
-     row1_div.appendChild(inventory_div);
-     row2_div.appendChild(inventoryreport_div);
-     row2_div.appendChild(appropriation_div);
-
-
-    //  get_popup_serch();
-    //  get_popup_add();
-    //  document.body.appendChild(popup_serch_div.div);
-
-    //  popup_serch_div.Set_Visible(false);
-    //  popup_add_div.Set_Visible(false);
 
     </script>  
 <div class="under-line">
