--- a/pharmacy/controlleddrug/main.html
+++ b/pharmacy/controlleddrug/main.html
@@ -6,16 +6,20 @@
   <title>管制藥結存頁面</title>
   <link rel="stylesheet" href="main.css">
   <script src="../../ApiURL.js"></script>
-  <script src="../../Function/Basic.js"></script>
-  <script src="../../dist/JsBarcode.all.js"></script>
+  <script src="../../ChatHub.js"></script>
+  <script src="../../Function/WebApiFunc.js"></script>
   <script src="../../svg/mySVG.js"></script>
-  <script src="../../UI/map.js"></script>
+  <script src="../../Function/Basic.js"></script>
   <script src="../../popup/map.js"></script>
+  <script src="../../dist/JsBarcode.all.js"></script>
+  <script src="../../UI/map.js"></script>
+  <script src="../../session_check.js"></script>
+  <script src="../../session.js"></script>
 
   <script src="jsonFunc.js"></script>
   <script src="main.js"></script>
   <script src="main_loadingdata.js"></script>
-  <script src="main_popup_find.js"></script>
+  <script src="main_popup_serch.js"></script>
 
 </head>
 <body>
@@ -29,9 +33,8 @@
           const main_div = get_main();
           document.body.appendChild(main_div);    
           
-          const popup_find_div = get_popup_find();
-          document.body.appendChild(popup_find_div.div);
-          popup_find_div.Set_Visible(true);
+          get_popup_serch();
+          popup_serch_div.Set_Visible(false);
       </script>
    
 
