--- a/storehouse/inspection/frontpage.html
+++ b/storehouse/inspection/frontpage.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>盤點單管理</title>
+    <title>驗收單管理</title>
     <link rel="stylesheet" href="frontpage.css">
-    <script src="../../ApiURL.js"></script>
-    <script src="../../ChatHub.js"></script>
-    <script src="../../Function/WebApiFunc.js"></script>
-    <script src="../../svg/mySVG.js"></script>
-    <script src="../../Function/Basic.js"></script>
-    <script src="../../popup/map.js"></script>
-    <script src="../../dist/JsBarcode.all.js"></script>
-    <script src="../../UI/map.js"></script>
-    <script src="../../session_check.js"></script>
-    <script src="../../session.js"></script>
+    <script src="../../../../ApiURL.js"></script>
+    <script src="../../../../ChatHub.js"></script>
+    <script src="../../../../Function/WebApiFunc.js"></script>
+    <script src="../../../../svg/mySVG.js"></script>
+    <script src="../../../../Function/Basic.js"></script>
+    <script src="../../../../popup/map.js"></script>
+    <script src="../../../../dist/JsBarcode.all.js"></script>
+    <script src="../../../../UI/map.js"></script>
+    <script src="../../../../session_check.js"></script>
+    <script src="../../../../session.js"></script>
 
     <script src="jsonFunc.js"></script>
     <script src="frontpage.js"></script>
@@ -26,7 +26,7 @@
 </head>
 <body>
     <script>
-     check_session_off();
+     
      document.body.style.position = 'absolute';
      const header_div = get_header();
      document.body.appendChild(header_div);
