--- a/storehouse/inspection/main.html
+++ b/storehouse/inspection/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>盤點操作頁面</title>
+  <title>驗收操作頁面</title>
   <link rel="stylesheet" href="main.css">
   <script src="../../ApiURL.js"></script>
   <script src="../../ChatHub.js"></script>
@@ -25,8 +25,6 @@
 </head>
 <body>
       <script>
-        
-
         document.body.style.position = 'absolute';
         const header_div = get_header();
         document.body.appendChild(header_div);
