--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
-    <title>智慧庫儲登入頁</title>
+    <title>次世代智慧藥局管理平台</title>
     <script src="../../Function/Basic.js"></script>
 
     <script src="ApiURL.js"></script>
