--- a/storehouse/inspection/frontpage.html
+++ b/storehouse/inspection/frontpage.html
@@ -21,6 +21,8 @@
     <script src="frontpage_loadingdata.js"></script>
     <script src="forntpage_popup_serch.js"></script>
     <script src="frontpage_popup_add.js"></script>
+    <script src="frontpage_popup_upload.js"></script>
+    <script src="menu_popup.js"></script>
     
     
 </head>
@@ -36,11 +38,12 @@
 
      get_popup_serch();
      get_popup_add();
+     get_popup_upload();
      document.body.appendChild(popup_serch_div.div);
 
      popup_serch_div.Set_Visible(false);
      popup_add_div.Set_Visible(false);
-
+     popup_upload_div.Set_Visible(false);
     </script>  
 <div class="under-line">
   <B> Copyright ©2023 鴻森整合機電有限公司 </B>
