--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <form class="login-form" action="login.php" method="POST" onsubmit="return verifyUser(event)">
-            <h2>次世代智慧藥局管理平台</h2>
+            <h2>次世代智慧藥局整合平台</h2>
             <input type="text" name="account" placeholder="使用者帳號">
             <input type="password" name="password" placeholder="密碼">
             <button type="submit" id="login-btn">登入</button>
