--- a/pharmacy/inventory/main.html
+++ b/pharmacy/inventory/main.html
@@ -68,14 +68,19 @@
     }
   };
   var barcode_value = '';
+  var barcode_keydown_datetime;
     // 監聽頁面的keydown事件
   window.addEventListener('keydown', function(event) 
   {
-    if(document.body.style.overflow != "") return;
+     barcode_keydown(event);
+  });
+  async function barcode_keydown(event)
+  {
     // 判斷按下的按鍵是否是Tab鍵或Enter鍵
-    console.log(event.key);
+    
 
-    if (event.key === 'Tab' || event.key === 'Enter') {
+    if (event.key === 'Tab' || event.key === 'Enter') 
+    {
     // 防止頁面重新載入
         event.preventDefault();
         const parsedCode = parseBarcode(barcode_value);
@@ -85,10 +90,14 @@
         // 解析藍牙掃描器返回的數據
         if(parsedCode != '')
         {
+
+          const response = await serch_by_BarCode(parsedCode);
+          console.log("serch_by_BarCode",response)
+          if(response.Data.length == 0) return;
            for(var i = 0; i < allrows.length; i++)
            {
                const CODE = allrows[i].getAttribute("CODE")
-               if(CODE.toUpperCase() == parsedCode.toUpperCase())
+               if(CODE.toUpperCase() == response.Data[0].CODE.toUpperCase())
                {
                   sub_row_div_onclick(allrows[i]);
                   return;
@@ -98,25 +107,31 @@
     }
     else
     {
-        const isValid = /^[a-zA-Z0-9]+$/.test(event.key);
-        const isControlKey = (event.keyCode < 48 || event.keyCode > 90);
-        const isNumPadlKey = (event.keyCode >= 96 && event.keyCode <= 105);
-        
-
-        if (isValid && (!isControlKey||isNumPadlKey)) {
-            // 將解析後的條碼值設定為輸入框的值
-            barcode_value += event.key;
-        } 
+      const isValid = /^[a-zA-Z0-9<>+\-_,.*?]+$/.test(event.key);
+      const isControlKey = event.ctrlKey || event.altKey || event.shiftKey;
+      if (isValid && !isControlKey) 
+      {
+        if (barcode_keydown_datetime == null) {
+          barcode_value = "";
+        }
+        const totalMs = getTotalMilliseconds(barcode_keydown_datetime);
+        if (totalMs > 2000) {
+          barcode_value = "";
+        }
+        barcode_keydown_datetime = Date.now();
+        // 将解析后的条码值设置为输入框的值
+        barcode_value += event.key;
+        console.log("barcode_value", barcode_value);
+      } 
     }
-});
-
-// 解析帶有分隔符的字符串
-function parseBarcode(scannedCode) 
-{
-  const delimiter = /[\n\r]/g;
-  const matches = scannedCode.split(delimiter);
-  return matches[0];
-}
+  }
+  // 解析帶有分隔符的字符串
+  function parseBarcode(scannedCode) 
+  {
+    const delimiter = /[\n\r]/g;
+    const matches = scannedCode.split(delimiter);
+    return matches[0];
+  }
 </script>
   
 </body>
