--- a/storehouse/inventory/main.html
+++ b/storehouse/inventory/main.html
@@ -87,8 +87,14 @@
         {
            for(var i = 0; i < allrows.length; i++)
            {
-               const CODE = allrows[i].getAttribute("CODE")
+               const CODE = allrows[i].getAttribute("CODE");
+               const SKDIACODE = allrows[i].getAttribute("SKDIACODE");
                if(CODE.toUpperCase() == parsedCode.toUpperCase())
+               {
+                  sub_row_div_onclick(allrows[i]);
+                  return;
+               }
+               if(SKDIACODE.toUpperCase() == parsedCode.toUpperCase())
                {
                   sub_row_div_onclick(allrows[i]);
                   return;
