--- a/pharmacy/main.html
+++ b/pharmacy/main.html
@@ -14,6 +14,7 @@
     <script src="../../UI/map.js"></script>
     <script src="../../session_check.js"></script>
     <script src="../../session.js"></script>
+    <script src="../../pharmacy/inventory/jsonFunc.js"></script>
 
     <script src="main.js"></script>
 
