--- a/inventory/departmentselect.html
+++ b/inventory/departmentselect.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>智慧藥局系統</title>
-    <link rel="stylesheet" href="departmentselect .css">
+    <title>盤點作業首頁</title>
+    <link rel="stylesheet" href="departmentselect.css">
     <script src="../../ApiURL.js"></script>
     <script src="../../ChatHub.js"></script>
     <script src="../../session.js"></script>
@@ -14,7 +14,7 @@
     <script src="../../dist/JsBarcode.all.js"></script>
     <script src="../../UI/map.js"></script>
 
-    <script src="departmentselect .js"></script>
+    <script src="departmentselect.js"></script>
 
 
 </head>
@@ -24,7 +24,6 @@
      
      document.body.style.position = 'absolute';
      document.body.style.width = "100%";  
-     document.body.style.backgroundImage = "url('frontpage.png')";
      document.body.style.backgroundSize= "auto";
      document.body.style.backgroundPosition= "right top";
      
