--- a/inventory/departmentselect.html
+++ b/inventory/departmentselect.html
@@ -15,7 +15,7 @@
     <script src="../../UI/map.js"></script>
 
     <script src="departmentselect.js"></script>
-
+    <script src="jsonFunc.js"></script>
 
 </head>
 </head>
