--- a/pharmacy/main.html
+++ b/pharmacy/main.html
@@ -15,6 +15,7 @@
     <script src="../../session_check.js"></script>
     <script src="../../session.js"></script>
     <script src="../../pharmacy/inventory/jsonFunc.js"></script>
+    <script src="../../inventory/jsonFunc.js"></script>
 
     <script src="main.js"></script>
 
