--- a/inventory/recount.html
+++ b/inventory/recount.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>盤點單管理</title>
-    <link rel="stylesheet" href="frontpage.css">
+    <title>覆盤單管理</title>
+    <link rel="stylesheet" href="recount.css">
     <script src="../../../../ApiURL.js"></script>
     <script src="../../../../ChatHub.js"></script>
     <script src="../../../../Function/WebApiFunc.js"></script>
@@ -17,10 +17,10 @@
     <script src="../../../../session.js"></script>
 
     <script src="jsonFunc.js"></script>
-    <script src="frontpage.js"></script>
-    <script src="frontpage_loadingdata.js"></script>
-    <script src="forntpage_popup_serch.js"></script>
-    <script src="frontpage_popup_add.js"></script>
+    <script src="recount.js"></script>
+    <script src="recount_loadingdata.js"></script>
+    <script src="recount_popup_serch.js"></script>
+    <script src="recount_popup_add.js"></script>
     
     
 </head>
