--- a/inventory/main.html
+++ b/inventory/main.html
@@ -20,7 +20,7 @@
   <script src="../../session.js"></script>
 
   <script src="main_loadingdata.js"></script>
-  <script src="main_popup_input.js"></script>
+  <script src="popup_content_input.js"></script>
   <script src="main_popup_serch.js"></script>
   <script src="main.js"></script>
   <script src="jsonFunc.js"></script>
