--- a/inventory/index.html
+++ b/inventory/index.html
@@ -8,15 +8,19 @@
   <meta http-equiv="expires" content="0">
   <title>盤點操作頁面</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="../favicon.ico" >
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
+  <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
   <script src="../../Function/Basic.js?v=1.0"></script>
   <script>
     (async function() 
         {
+          loadScript("../../api/map.js");
           loadScript("../../ApiURL.js");
           loadScript("../../ChatHub.js");
           loadScript("../../svg/mySVG.js");
           loadScript("../../UI/map.js");
-          loadScript("../../popup/map.js");
+          loadScript("../../popup/map.js");    
           loadScript("../../dist/JsBarcode.all.js");
           loadScript("../../session_check.js");
           loadScript("../../session.js");
