--- a/inventory/frontpage.html
+++ b/inventory/frontpage.html
@@ -5,23 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>盤點單管理</title>
     <link rel="stylesheet" href="frontpage.css">
-    <script src="../../../../ApiURL.js"></script>
-    <script src="../../../../ChatHub.js"></script>
-    <script src="../../../../Function/WebApiFunc.js"></script>
-    <script src="../../../../svg/mySVG.js"></script>
-    <script src="../../../../Function/Basic.js"></script>
-    <script src="../../../../popup/map.js"></script>
-    <script src="../../../../dist/JsBarcode.all.js"></script>
-    <script src="../../../../UI/map.js"></script>
-    <script src="../../../../session_check.js"></script>
-    <script src="../../../../session.js"></script>
-
-    <script src="jsonFunc.js"></script>
-    <script src="frontpage.js"></script>
-    <script src="frontpage_loadingdata.js"></script>
-    <script src="forntpage_popup_serch.js"></script>
-    <script src="frontpage_popup_add.js"></script>
-    
+    <script src="../../Function/Basic.js?v=1.0"></script>
+    <script>
+      (async function() 
+          {
+            loadScript("../../api/map.js");
+            loadScript("../../ApiURL.js");
+            loadScript("../../ChatHub.js");
+            loadScript("../../svg/mySVG.js");
+            loadScript("../../UI/map.js");
+            loadScript("../../popup/map.js");    
+            loadScript("../../dist/JsBarcode.all.js");
+            loadScript("../../session_check.js");
+            loadScript("../../session.js");
+            loadScript("frontpage.js");
+            loadScript("frontpage_loadingdata.js");
+            loadScript("forntpage_popup_serch.js");
+            loadScript("frontpage_popup_add.js");
+            loadScript("jsonFunc.js");
+          })();
+  
+    </script>
     
 </head>
 <body>
