--- a/medGroup/index.html
+++ b/medGroup/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>智慧藥局系統</title>
-  <link rel="stylesheet" href="selectPage.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="icon" href="../favicon.ico" >
+  <link rel="stylesheet" href="medGroup.css">
+  <link rel="icon" href="../../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
-  <script src="../Function/Basic.js?v=1.0"></script>
+  <script src="../../Function/Basic.js?v=1.0"></script>
   <script>
     (async function(){
     loadScript("../api/map.js");
@@ -21,33 +20,22 @@
     loadScript("../dist/JsBarcode.all.js");
     loadScript("../session_check.js");
     loadScript("../session.js");
+    loadScript("./medGroup.js");
+    loadScript("../UI/navBar.js");
     })();
   </script>
 </head>
 <body>
-  <div class="med_group_container">
-    <div class="h2_header">
-      <h2>群組總覽</h2>
-    </div>
-    <div class="display_groups_card_container">
-    </div>
-    <div class="display_group_detail_container">
-      <div class="display_group_title_container">請選擇上方群組</div>
-      
-      <!--
-      <div class="med_group_close_button">
-        <img src="./close.png" alt="">
-      </div>
-      -->
-    </div>
-
-    <div class="add_group_button">
-      新增群組
+  <div class="gm_main_container">
+  </div>
+  <div class="bottom_gm_nav_container">
+    <div class="bottom_gm_nav_card_container">
+      <div class="bottom_gm_nav_card">藥品群組</div>
+      <div class="bottom_gm_nav_card" style="display: none;">藥檔管理</div>
     </div>
   </div>
   <div class="under-line">
     <B> Copyright ©2023 鴻森整合機電有限公司 </B>
   </div>
 </body>
-<script src="selectPage.js"></script>
 </html>
